[package]
name = "rumqtt"
description = "Mqtt client for your IOT needs"
version = "0.31.0"
authors = ["raviteja <kraviteza@gmail.com"]
documentation = "https://docs.rs/rumqtt"
repository = "https://github.com/AtherEnergy/rumqtt"
edition = "2018"
license = "Unlicense"

[dependencies]
tokio = { version = "1.20", features = [ "rt", "rt-multi-thread", "net", "time" ], default-features = false }
tokio-util = { version = "0.7.0" , features = [ "codec"] }
tokio-stream = { version = "0.1.8" }
bytes = "1.2"
#futures = "0.1.28"
futures = "0.3"
crossbeam-channel = "0.3"
log = "0.4"
failure = "0.1"
derive_more = "0.13"
base64 = "0.10"
uuid = {version = "0.7", features = ["serde", "v4"]}
mqtt311 = "0.2"
tokio-rustls = ">=0.8, <=0.9"
webpki = ">=0.8, <=0.19"


[dependencies.jsonwebtoken]
version = ">=5.0.1, <=6.0"
optional = true

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.serde]
version = "1"
optional = true

[dependencies.serde_derive]
version = "1"
optional = true

[dev-dependencies]
envy = "0.3"
serde = "1"
serde_derive = "1"
pretty_env_logger = "0.3"

[features]
default = ["jwt"]
acknotify = []
jwt = ["jsonwebtoken", "chrono", "serde", "serde_derive"]
